--- a/main.html
+++ b/main.html
@@ -15,6 +15,86 @@
         <a href="" class="a5">Carritos</a>
         <p class="p1">3</p>
     </section>
-    <section class="container2"></section>
+
+    <section class="container2">
+        <h1>Todos los productos</h1>
+
+        <div class="prod1">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
+            <div class="div1">
+                <p class="p2">Chaqueta Impermeable En Gabán Para Dama 'Negro'</p>
+                <p class="p3">$93900</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+
+        <div class="prod2">
+            <img  src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
+            <div class="div2">
+                <p class="p4">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
+                <p class="p5">$93900</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+
+        <div class="prod3">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_930447-MCO71410142210_092023-F.webp" alt="">
+            <div class="div3">
+                <p class="p6">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
+                <p class="p7">$93900</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+
+        <div class="prod4">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_712593-MCO41606376126_052020-F.webp" alt="">
+            <div class="div4">
+                <p class="p8">Chaqueta Hombre Cuero Sintético</p>
+                <p class="p9">$102000</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+
+        <div class="prod5">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+            <div class="div5">
+                <p class="p10">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
+                <p class="p11">$93900</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+
+        <div class="prod6">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+            <div class="div6">
+                <p class="p12">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
+                <p class="p13">$93900</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+
+        <div class="prod7">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+            <div class="div7">
+                <p class="p14">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
+                <p class="p15">$93900</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+
+        <div class="prod8">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+            <div class="div8">
+                <p class="p16">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
+                <p class="p17">$93900</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+    </section>
 </body>
+
+<footer>
+    &copy; <em id="date">
+    </em>Career Karma
+  </footer>
 </html>
