feat :sparkles: fin creacion main
sentermino la creacion del main de forma satisfactoria

--- a/main.html
+++ b/main.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="prod2">
-            <img  src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
+            <img  src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
             <div class="div2">
                 <p class="p4">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
                 <p class="p5">$93900</p>
@@ -56,36 +56,36 @@
         </div>
 
         <div class="prod5">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_829630-MCO31080337339_062019-F.webp" alt="">
             <div class="div5">
-                <p class="p10">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
-                <p class="p11">$93900</p>
+                <p class="p10">Calidad Chaqueta Hombre Algodon Colombiano...</p>
+                <p class="p11">$77900</p>
                 <button>Agregar</button>
             </div>
         </div>
 
         <div class="prod6">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_906094-MCO53976036500_022023-F.webp" alt="">
             <div class="div6">
-                <p class="p12">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
-                <p class="p13">$93900</p>
+                <p class="p12">Camiseta De Compresión En Licra Uv Slim.</p>
+                <p class="p13">$38000</p>
                 <button>Agregar</button>
             </div>
         </div>
 
         <div class="prod7">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_649847-MCO43854241255_102020-F.webp" alt="">
             <div class="div7">
-                <p class="p14">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
-                <p class="p15">$93900</p>
+                <p class="p14">Camiseta Tipo Polo Color Dama Mujer.</p>
+                <p class="p15">$26255</p>
                 <button>Agregar</button>
             </div>
         </div>
 
         <div class="prod8">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_995623-MCO70722158553_072023-F.webp" alt="">
             <div class="div8">
-                <p class="p16">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
+                <p class="p16">Camiseta Deportiva, Crossfit, Gym.</p>
                 <p class="p17">$93900</p>
                 <button>Agregar</button>
             </div>
