feat :sparkles: modulo abrigos echo
se creo el modulo de abrigos correctamente

--- a/abrigos.html
+++ b/abrigos.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./abrigos.css">
     <title>Document</title>
 </head>
 <body>
     <section class="container">
         <h1>Campus shop</h1>
-        <a href="./main.html" class="a">Todos los productos</a>
-        <a href="./abrigos.html" class="a2">Abrigos</a>
+        <a href="" class="a">Todos los productos</a>
+        <a href="" class="a2">Abrigos</a>
         <a href="" class="a3">Camisetas</a>
         <a href="" class="a4">Pantalones</a>
         <a href="" class="a5">Carritos</a>
@@ -17,7 +17,7 @@
     </section>
 
     <section class="container2">
-        <h1>Todos los productos</h1>
+        <h1>Abrigos</h1>
 
         <div class="prod1">
             <img src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
@@ -64,32 +64,7 @@
             </div>
         </div>
 
-        <div class="prod6">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_906094-MCO53976036500_022023-F.webp" alt="">
-            <div class="div6">
-                <p class="p12">Camiseta De Compresión En Licra Uv Slim.</p>
-                <p class="p13">$38000</p>
-                <button>Agregar</button>
-            </div>
-        </div>
-
-        <div class="prod7">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_649847-MCO43854241255_102020-F.webp" alt="">
-            <div class="div7">
-                <p class="p14">Camiseta Tipo Polo Color Dama Mujer.</p>
-                <p class="p15">$26255</p>
-                <button>Agregar</button>
-            </div>
-        </div>
-
-        <div class="prod8">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_995623-MCO70722158553_072023-F.webp" alt="">
-            <div class="div8">
-                <p class="p16">Camiseta Deportiva, Crossfit, Gym.</p>
-                <p class="p17">$93900</p>
-                <button>Agregar</button>
-            </div>
-        </div>
+    
     </section>
 </body>
 
