feat :sparkles: modulo camisetas echo
se creo el modulo de camisetas y se enlaso con
los demas

--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
         <h1>Campus shop</h1>
         <a href="./main.html" class="a">Todos los productos</a>
         <a href="./abrigos.html" class="a2">Abrigos</a>
-        <a href="" class="a3">Camisetas</a>
+        <a href="./camisetas.html" class="a3">Camisetas</a>
         <a href="" class="a4">Pantalones</a>
         <a href="" class="a5">Carritos</a>
         <p class="p1">3</p>
