feat :sparkles: modulo pantalones echos
se creo el modulo de pantalones correctamente y se
enlaso con los demas modulos

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
         <a href="./main.html" class="a">Todos los productos</a>
         <a href="./abrigos.html" class="a2">Abrigos</a>
         <a href="./camisetas.html" class="a3">Camisetas</a>
-        <a href="" class="a4">Pantalones</a>
+        <a href="./pantalones.html" class="a4">Pantalones</a>
         <a href="" class="a5">Carritos</a>
         <p class="p1">3</p>
     </section>
