--- a/pantalones.html
+++ b/pantalones.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./abrigos.css">
+    <link rel="stylesheet" href="./pantalones.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,49 +17,49 @@
     </section>
 
     <section class="container2">
-        <h1>Abrigos</h1>
+        <h1>Camisetas</h1>
 
         <div class="prod1">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_731406-MCO42646277112_072020-F.webp" alt="">
             <div class="div1">
-                <p class="p2">Chaqueta Impermeable En Gabán Para Dama 'Negro'</p>
-                <p class="p3">$93900</p>
+                <p class="p2">Pantalon En Dril Licrado Para Hombre.</p>
+                <p class="p3">$58900</p>
                 <button>Agregar</button>
             </div>
         </div>
 
         <div class="prod2">
-            <img  src="https://http2.mlstatic.com/D_NQ_NP_2X_787280-MCO51843885132_102022-F.webp" alt="">
+            <img  src="https://http2.mlstatic.com/D_NQ_NP_2X_795748-MCO70527773883_072023-F.webp" alt="">
             <div class="div2">
-                <p class="p4">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
-                <p class="p5">$93900</p>
+                <p class="p4">Pantalón Camuflado Hermoso.</p>
+                <p class="p5">$104405</p>
                 <button>Agregar</button>
             </div>
         </div>
 
         <div class="prod3">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_930447-MCO71410142210_092023-F.webp" alt="">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_758206-MCO70501309390_072023-F.webp" alt="">
             <div class="div3">
-                <p class="p6">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
-                <p class="p7">$93900</p>
+                <p class="p6">Pantalón Jogger Cargo, Táctico, Militar.</p>
+                <p class="p7">$104500</p>
                 <button>Agregar</button>
             </div>
         </div>
 
         <div class="prod4">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_712593-MCO41606376126_052020-F.webp" alt="">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_947436-MCO69626235546_052023-F.webp" alt="">
             <div class="div4">
-                <p class="p8">Chaqueta Hombre Cuero Sintético</p>
-                <p class="p9">$102000</p>
+                <p class="p8">Pantalón Jeans De Colores Entubado Para Hombre.</p>
+                <p class="p9">$61750</p>
                 <button>Agregar</button>
             </div>
         </div>
 
         <div class="prod5">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_829630-MCO31080337339_062019-F.webp" alt="">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_618657-MCO69523195685_052023-F.webp" alt="">
             <div class="div5">
-                <p class="p10">Calidad Chaqueta Hombre Algodon Colombiano...</p>
-                <p class="p11">$77900</p>
+                <p class="p10">Pantalon Camuflado, De Bolsillos 100% Dreal</p>
+                <p class="p11">$89990</p>
                 <button>Agregar</button>
             </div>
         </div>
