feat :sparkles: inicio modulo de carrito
se comenzo con la creacion del modulo del carrito

--- a/abrigos.html
+++ b/abrigos.html
@@ -12,7 +12,7 @@
         <a href="./abrigos.html" class="a2">Abrigos</a>
         <a href="./camisetas.html" class="a3">Camisetas</a>
         <a href="./pantalones.html" class="a4">Pantalones</a>
-        <a href="" class="a5">Carritos</a>
+        <a href="./carrito.html" class="a5">Carritos</a>
         <p class="p1">3</p>
     </section>
 
