--- a/carrito.html
+++ b/carrito.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./camisetas.css">
+    <link rel="stylesheet" href="./carrito.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,59 +12,48 @@
         <a href="./abrigos.html" class="a2">Abrigos</a>
         <a href="./camisetas.html" class="a3">Camisetas</a>
         <a href="./pantalones.html" class="a4">Pantalones</a>
-        <a href="" class="a5">Carritos</a>
+        <a href="./carrito.html" class="a5">Carritos</a>
         <p class="p1">3</p>
     </section>
 
     <section class="container2">
-        <h1>Camisetas</h1>
+        <h1>Carrito</h1>
 
         <div class="prod1">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_906094-MCO53976036500_022023-F.webp" alt="">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_712593-MCO41606376126_052020-F.webp" alt="">
             <div class="div1">
-                <p class="p2">Camiseta De Compresión En Licra Uv Slim</p>
-                <p class="p3">$38000</p>
-                <button>Agregar</button>
+                <p class="p2">Nombre: <br> Chaqueta Hombre Cuero Sintético</p>
+                <p class="p3">Precio: <br><br> $102000</p>
+                <p class="p4">SubTotal: <br><br> $2000</p>
+                <label for="cantidad">cantidad</label>
+                <input class="cantidad" type="text" placeholder="2">
             </div>
         </div>
 
         <div class="prod2">
-            <img  src="https://http2.mlstatic.com/D_NQ_NP_2X_649847-MCO43854241255_102020-F.webp" alt="">
+            <img  src="https://http2.mlstatic.com/D_NQ_NP_2X_731406-MCO42646277112_072020-F.webp" alt="">
             <div class="div2">
-                <p class="p4">Camiseta Tipo Polo Color Dama Mujer.</p>
-                <p class="p5">$26255/p>
-                <button>Agregar</button>
+                <p class="p5">Nombre: <br>Pantalon En Dril Licrado Para Hombre.</p>
+                <p class="p6">Precio: <br><br>$58900</p>
+                <p class="p7">SubTotal: <br><br> $4000</p>
+                <label for="cantidad">cantidad</label>
+                <input class="cantidad" type="text" placeholder="2">
             </div>
         </div>
 
         <div class="prod3">
             <img src="https://http2.mlstatic.com/D_NQ_NP_2X_995623-MCO70722158553_072023-F.webp" alt="">
             <div class="div3">
-                <p class="p6">Camiseta Deportiva, Crossfit, Gym.</p>
-                <p class="p7">$29900</p>
-                <button>Agregar</button>
+                <p class="p8">Nombre: <br>Camiseta Deportiva, Crossfit, Gym.</p>
+                <p class="p9">Precio: <br><br>$29900</p>
+                <p class="p10">SubTotal: <br><br> $2500</p>
+                <label for="cantidad">cantidad</label>
+                <input class="cantidad" type="text" placeholder="2">
             </div>
         </div>
-
-        <div class="prod4">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_776916-MCO72088562654_102023-F.webp" alt="">
-            <div class="div4">
-                <p class="p8">Camisetas Bandas De Rock Metal Heavy Riffs.</p>
-                <p class="p9">$32850</p>
-                <button>Agregar</button>
-            </div>
-        </div>
-
-        <div class="prod5">
-            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_968038-MCO53410409233_012023-F.webp" alt="">
-            <div class="div5">
-                <p class="p10">Camiseta Anime Nezuko Kamado Kimetsu No Yaiba</p>
-                <p class="p11">$29900</p>
-                <button>Agregar</button>
-            </div>
-        </div>
-
-    
+    </section>
+    <section class="container3">
+        
     </section>
 </body>
 
