--- a/carrito.html
+++ b/carrito.html
@@ -48,12 +48,17 @@
                 <p class="p9">Precio: <br><br>$29900</p>
                 <p class="p10">SubTotal: <br><br> $2500</p>
                 <label for="cantidad">cantidad</label>
-                <input class="cantidad" type="text" placeholder="2">
+                <input class="cantidad" type="text" placeholder="1">
             </div>
         </div>
     </section>
     <section class="container3">
+        <button class="butt">Vaciar carrito</button>
         
+        <div class="div4">
+            <button class="butt2">Comprar ahora</button>
+            <p class="p11">Total: <br> $199300</p>
+        </div>
     </section>
 </body>
 
