--- a/html/camisetas.html
+++ b/html/camisetas.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/camisetas.css">
+    <link rel="stylesheet" href="../css/camisetas.css">
     <title>Document</title>
 </head>
 <body>
     <section class="container">
         <h1>Campus shop</h1>
-        <a href="./main.html" class="a">Todos los productos</a>
-        <a href="./abrigos.html" class="a2">Abrigos</a>
-        <a href="./camisetas.html" class="a3">Camisetas</a>
-        <a href="./pantalones.html" class="a4">Pantalones</a>
-        <a href="./carrito.html" class="a5">Carritos</a>
+        <a href="../html/main.html" class="a">Todos los productos</a>
+        <a href="../html/abrigos.html" class="a2">Abrigos</a>
+        <a href="../html/camisetas.html" class="a3">Camisetas</a>
+        <a href="../html/pantalones.html" class="a4">Pantalones</a>
+        <a href="../html/carrito.html" class="a5">Carritos</a>
         <p class="p1">3</p>
     </section>
 
