--- a/html/main.html
+++ b/html/main.html
@@ -2,22 +2,22 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./css/abrigos.css">
+    <link rel="stylesheet" href="../css/main.css">
     <title>Document</title>
 </head>
 <body>
     <section class="container">
         <h1>Campus shop</h1>
-        <a href="./main.html" class="a">Todos los productos</a>
-        <a href="./abrigos.html" class="a2">Abrigos</a>
-        <a href="./camisetas.html" class="a3">Camisetas</a>
-        <a href="./pantalones.html" class="a4">Pantalones</a>
-        <a href="./carrito.html" class="a5">Carritos</a>
+        <a href="../html/main.html" class="a">Todos los productos</a>
+        <a href="../html/abrigos.html" class="a2">Abrigos</a>
+        <a href="../html/camisetas.html" class="a3">Camisetas</a>
+        <a href="../html/pantalones.html" class="a4">Pantalones</a>
+        <a href="../html/carrito.html" class="a5">Carritos</a>
         <p class="p1">3</p>
     </section>
 
     <section class="container2">
-        <h1>Abrigos</h1>
+        <h1>Todos los productos</h1>
 
         <div class="prod1">
             <img src="https://http2.mlstatic.com/D_NQ_NP_2X_904140-MCO51843801912_102022-F.webp" alt="">
@@ -64,7 +64,32 @@
             </div>
         </div>
 
-    
+        <div class="prod6">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_906094-MCO53976036500_022023-F.webp" alt="">
+            <div class="div6">
+                <p class="p12">Camiseta De Compresión En Licra Uv Slim.</p>
+                <p class="p13">$38000</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+
+        <div class="prod7">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_649847-MCO43854241255_102020-F.webp" alt="">
+            <div class="div7">
+                <p class="p14">Camiseta Tipo Polo Color Dama Mujer.</p>
+                <p class="p15">$26255</p>
+                <button>Agregar</button>
+            </div>
+        </div>
+
+        <div class="prod8">
+            <img src="https://http2.mlstatic.com/D_NQ_NP_2X_995623-MCO70722158553_072023-F.webp" alt="">
+            <div class="div8">
+                <p class="p16">Camiseta Deportiva, Crossfit, Gym.</p>
+                <p class="p17">$93900</p>
+                <button>Agregar</button>
+            </div>
+        </div>
     </section>
 </body>
 
