--- a/carrito_vacio.html
+++ b/carrito_vacio.html
@@ -30,3 +30,8 @@
             </div>
         </div>
 
+        <footer>
+            &copy; <em id="date">
+            </em>Career Karma
+        </footer>
+</html>
