fix: :art: Cambios en diseño
algunos pequeños cambios en los html y css para que estuviese mejor

--- a/camisetas.html
+++ b/camisetas.html
@@ -32,7 +32,7 @@
             <img  src="https://http2.mlstatic.com/D_NQ_NP_2X_649847-MCO43854241255_102020-F.webp" alt="">
             <div class="div2">
                 <p class="p4">Camiseta Tipo Polo Color Dama Mujer.</p>
-                <p class="p5">$26255/p>
+                <p class="p5">$26255</p>
                 <button>Agregar</button>
             </div>
         </div>
