--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
         <div class="prod3">
             <img src="https://http2.mlstatic.com/D_NQ_NP_2X_930447-MCO71410142210_092023-F.webp" alt="">
             <div class="div3">
-                <p class="p6">Chaqueta Impermeable En Gabán Para Dama 'Azul'</p>
+                <p class="p6">Chaqueta Impermeable En Gabán Para Dama 'Blanca'</p>
                 <p class="p7">$93900</p>
                 <button>Agregar</button>
             </div>
