--- a/pantalones.html
+++ b/pantalones.html
@@ -17,7 +17,7 @@
     </section>
 
     <section class="container2">
-        <h1>Camisetas</h1>
+        <h1>Pantalones</h1>
 
         <div class="prod1">
             <img src="https://http2.mlstatic.com/D_NQ_NP_2X_731406-MCO42646277112_072020-F.webp" alt="">
