fix: 🔧 se movio la ruta del css enlazado con index
debido a que index cambio de nombre y ubicacion se cambiaron las rutas

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <section class="container">
         <h1>Campus shop</h1>
-        <a href="../view/main.html" class="a">Todos los productos</a>
-        <a href="../view/abrigos.html" class="a2">Abrigos</a>
-        <a href="../view/camisetas.html" class="a3">Camisetas</a>
-        <a href="../view/pantalones.html" class="a4">Pantalones</a>
-        <a href="../view/carrito.html" class="a5">Carritos</a>
+        <a href="./index.html" class="a">Todos los productos</a>
+        <a href="./view/abrigos.html" class="a2">Abrigos</a>
+        <a href="./view/camisetas.html" class="a3">Camisetas</a>
+        <a href="./view/pantalones.html" class="a4">Pantalones</a>
+        <a href="./view/carrito.html" class="a5">Carritos</a>
         <p class="p1">3</p>
     </section>
 
